--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="hero__container">
       <img src="starter-code/assets/logo.svg" alt="Header Logo" class="hero__logo">
       <h3 class="hero__header">
-        We make your music sound extraordinary
+        We make your music sound extraordinary.
       </h3>
 
       <p class="hero__text">
