--- a/index.html
+++ b/index.html
@@ -78,9 +78,15 @@
         </p>
     
         <div class="footer__links">
-          <img src="starter-code/assets/icon-facebook.svg" alt="Facebook logo">
-          <img src="starter-code/assets/icon-instagram.svg" alt="Instagram logo">
-          <img src="starter-code/assets/icon-twitter.svg" alt="Twitter logo">
+          <a href="#">
+            <img src="starter-code/assets/icon-facebook.svg" alt="Facebook logo">
+          </a>
+          <a href="#">
+            <img src="starter-code/assets/icon-instagram.svg" alt="Instagram logo">
+          </a>
+          <a href="#">
+            <img src="starter-code/assets/icon-twitter.svg" alt="Twitter logo">
+          </a>
         </div>
       </div>
        
